# parameter-framework

./: .clang-format  .gitattributes  .gitignore  .travis.yml  .version  AnswerMessage_8cpp.html  AnswerMessage_8cpp__incl.map  AnswerMessage_8cpp__incl.md5  AnswerMessage_8h.html  AnswerMessage_8h__dep__incl.map  AnswerMessage_8h__dep__incl.md5  AnswerMessage_8h__incl.map  AnswerMessage_8h__incl.md5  AreaConfiguration_8cpp.html  AreaConfiguration_8cpp__incl.map  AreaConfiguration_8cpp__incl.md5  AreaConfiguration_8h.html  AreaConfiguration_8h__dep__incl.map  AreaConfiguration_8h__dep__incl.md5  AreaConfiguration_8h__incl.map  AreaConfiguration_8h__incl.md5  ArrayParameter_8cpp.html  ArrayParameter_8cpp__incl.map  ArrayParameter_8cpp__incl.md5  ArrayParameter_8h.html  ArrayParameter_8h__dep__incl.map  ArrayParameter_8h__dep__incl.md5  ArrayParameter_8h__incl.map  ArrayParameter_8h__incl.md5  AutoLock_8cpp.html  AutoLock_8cpp__incl.map  AutoLock_8cpp__incl.md5  AutoLock_8h.html  AutoLock_8h__dep__incl.map  AutoLock_8h__dep__incl.md5  AutoLock_8h__incl.map  AutoLock_8h__incl.md5  AutoLog_8cpp.html  AutoLog_8cpp__incl.map  AutoLog_8cpp__incl.md5  (+3163 more)
asio/: CMakeLists.txt
asio/stub/: asio.hpp
bindings/c/: CMakeLists.txt  ParameterFramework.cpp  ParameterFramework.h  Test.cpp
bindings/python/: Android.mk  CMakeLists.txt  README.md  pfw.i  sample.py
cmake/: CMakeFindDependencyMacro.cmake  CMakeLists.txt  FindLibXml2.cmake  ParameterFrameworkConfig.cmake
doc/: AlwaysAssert_8hpp.html  AlwaysAssert_8hpp__dep__incl.map  AlwaysAssert_8hpp__dep__incl.md5  AlwaysAssert_8hpp__incl.map  AlwaysAssert_8hpp__incl.md5  AlwaysAssert_8hpp_source.html  AnswerMessage_8cpp.html  AnswerMessage_8cpp__incl.map  AnswerMessage_8cpp__incl.md5  AnswerMessage_8cpp_source.html  AnswerMessage_8h.html  AnswerMessage_8h__dep__incl.map  AnswerMessage_8h__dep__incl.md5  AnswerMessage_8h__incl.map  AnswerMessage_8h__incl.md5  AnswerMessage_8h_source.html  AreaConfiguration_8cpp.html  AreaConfiguration_8cpp__incl.map  AreaConfiguration_8cpp__incl.md5  AreaConfiguration_8cpp_source.html  AreaConfiguration_8h.html  AreaConfiguration_8h__dep__incl.map  AreaConfiguration_8h__dep__incl.md5  AreaConfiguration_8h__incl.map  AreaConfiguration_8h__incl.md5  AreaConfiguration_8h_source.html  ArrayParameter_8cpp.html  ArrayParameter_8cpp__incl.map  ArrayParameter_8cpp__incl.md5  ArrayParameter_8cpp_source.html  ArrayParameter_8h.html  ArrayParameter_8h__dep__incl.map  ArrayParameter_8h__dep__incl.md5  ArrayParameter_8h__incl.map  ArrayParameter_8h__incl.md5  ArrayParameter_8h_source.html  AutoLock_8h.html  AutoLock_8h__dep__incl.map  AutoLock_8h__dep__incl.md5  AutoLock_8h__incl.map  (+5120 more)
doc/requirements/: APIs.md  CMakeLists.txt  Requirements.md  requirements.css  requirements.md
doc/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_8.js  classes_9.js  (+79 more)
parameter/: Android.mk  AreaConfiguration.cpp  AreaConfiguration.h  ArrayParameter.cpp  ArrayParameter.h  AutoLock.cpp  AutoLock.h  AutoLog.cpp  AutoLog.h  BackSynchronizer.cpp  BackSynchronizer.h  BaseIntegerParameterType.cpp  BaseIntegerParameterType.h  BaseParameter.cpp  BaseParameter.h  BinarySerializableElement.cpp  BinarySerializableElement.h  BinaryStream.cpp  BinaryStream.h  BitParameter.cpp  BitParameter.h  BitParameterBlock.cpp  BitParameterBlock.h  BitParameterBlockType.cpp  BitParameterBlockType.h  BitParameterType.cpp  BitParameterType.h  BitwiseAreaConfiguration.cpp  BitwiseAreaConfiguration.h  BooleanParameterType.cpp  BooleanParameterType.h  CMakeLists.txt  CommandHandlerWrapper.cpp  CommandHandlerWrapper.h  Component.cpp  Component.h  ComponentInstance.cpp  ComponentInstance.h  ComponentLibrary.cpp  ComponentLibrary.h  (+179 more)
remote-process/: Android.mk  CMakeLists.txt  README.md  main.cpp  remote-process.aip  remote-process.dev
remote-processor/: Android.mk  AnswerMessage.cpp  AnswerMessage.h  BackgroundRemoteProcessorServer.cpp  BackgroundRemoteProcessorServer.h  BackgroundRemoteProcessorServerBuilder.cpp  BackgroundRemoteProcessorServerBuilder.h  CMakeLists.txt  ConnectionSocket.cpp  ConnectionSocket.h  ListeningSocket.cpp  ListeningSocket.h  Message.cpp  Message.h  README.md  RemoteCommand.h  RemoteCommandHandler.h  RemoteCommandHandlerTemplate.h  RemoteProcessorProtocol.h  RemoteProcessorServer.cpp  RemoteProcessorServer.h  RemoteProcessorServerBuilder.cpp  RemoteProcessorServerInterface.h  RequestMessage.cpp  RequestMessage.h  Socket.cpp  Socket.h  remote-processor.dev
skeleton-subsystem/: CMakeLists.txt  README.md  SkeletonMappingKeys.h  SkeletonSubsystem.cpp  SkeletonSubsystem.h  SkeletonSubsystemBuilder.cpp  SkeletonSubsystemObject.cpp  SkeletonSubsystemObject.h
utility/: AlwaysAssert.hpp  Android.mk  BinaryCopy.hpp  CMakeLists.txt  DynamicLibrary.cpp  DynamicLibrary.hpp  ErrorContext.hpp  FullIo.cpp  FullIo.hpp  Iterator.hpp  Memory.hpp  NaiveTokenizer.cpp  NaiveTokenizer.h  NonCopyable.hpp  PfError.hpp  SymbolExport.h  TmpFile.hpp  Tokenizer.cpp  Tokenizer.h  Unused.h  Utility.cpp  Utility.h  convert.hpp
xmlserializer/: Android.mk  CMakeLists.txt  XML  XmlComposer.cpp  XmlComposer.h  XmlDocSink.cpp  XmlDocSink.h  XmlDocSource.cpp  XmlDocSource.h  XmlElement.cpp  XmlElement.h  XmlFileDocSink.cpp  XmlFileDocSink.h  XmlFileDocSource.cpp  XmlFileDocSource.h  XmlMemoryDocSink.cpp  XmlMemoryDocSink.h  XmlMemoryDocSource.cpp  XmlMemoryDocSource.h  XmlParser.cpp  XmlParser.h  XmlSerializer.cpp  XmlSerializer.h  XmlSerializingContext.cpp  XmlSerializingContext.h  XmlSink.h  XmlSource.h  XmlStreamDocSink.cpp  XmlStreamDocSink.h  XmlStringDocSink.cpp  XmlStringDocSink.h  XmlStringDocSource.cpp  XmlStringDocSource.h  XmlUtil.cpp  XmlUtil.h  parameter  parameter-connector-test  parameter-test  remote-process  remote-processor  (+3 more)
(+439 files in other folders)
